--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <title>Document</title>
 </head>
 <body>
+    <!--const and let-->
     <div>DIV1</div>
     <div>DIV2</div>
     <div>DIV3</div>
     <div>DIV4</div>
+
+    <!--string literals-->
+    <div class="user_list">
+       
+
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
