--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 
     <!--string literals-->
     <div class="user_list">
-       
-
     </div>
+
+    <!--template name with price-->
+     <div class="product_list">
+    </div>
+
     <script src="main.js"></script>
 </body>
 </html>
